fix(toast): hide content on collapses toasts

--- a/src/components/toast/ToastContext.module.scss
+++ b/src/components/toast/ToastContext.module.scss
@@ -58,12 +58,19 @@ $persistentHeight: var(--amino-toast-persistent-height);
 
   .persistentToast {
     width: 100%;
+    z-index: 8;
+
+    &:nth-of-type(1) {
+      z-index: 10;
+    }
+    &:nth-of-type(2) {
+      z-index: 9;
+    }
   }
 
   &:not(.expanded) {
     .persistentToast {
       position: absolute;
-      z-index: 8;
       scale: 0.5;
       opacity: 0;
       filter: brightness(2);
@@ -72,14 +79,12 @@ $persistentHeight: var(--amino-toast-persistent-height);
 
       &:nth-of-type(1) {
         bottom: 0;
-        z-index: 10;
         scale: 1;
         opacity: 1;
         filter: brightness(1);
       }
       &:nth-of-type(2) {
         bottom: -8px;
-        z-index: 9;
         scale: 0.9;
         opacity: 1;
         filter: brightness(1.5);
